--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^2.14.5",
     "apollo-server-express": "^2.14.5",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.6.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-bootstrap": "^1.5.2",
     "validator": "^13.1.1",
     "xss-clean": "^0.1.1"
   }
